@@ -86,6 +86,34 @@ end_import
 
 begin_import
 import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|Log
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|LogFactory
+import|;
+end_import
+
+begin_import
+import|import
 name|com
 operator|.
 name|google
@@ -136,6 +164,22 @@ specifier|public
 class|class
 name|MaxRunningAppsEnforcer
 block|{
+DECL|field|LOG
+specifier|private
+specifier|static
+specifier|final
+name|Log
+name|LOG
+init|=
+name|LogFactory
+operator|.
+name|getLog
+argument_list|(
+name|FairScheduler
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 DECL|field|scheduler
 specifier|private
 specifier|final
@@ -684,10 +728,18 @@ name|prev
 init|=
 literal|null
 decl_stmt|;
-name|int
-name|numNowRunnable
+name|List
+argument_list|<
+name|AppSchedulable
+argument_list|>
+name|noLongerPendingApps
 init|=
-literal|0
+operator|new
+name|ArrayList
+argument_list|<
+name|AppSchedulable
+argument_list|>
+argument_list|()
 decl_stmt|;
 while|while
 condition|(
@@ -748,44 +800,29 @@ operator|.
 name|getQueue
 argument_list|()
 operator|.
-name|makeAppRunnable
+name|getRunnableAppSchedulables
+argument_list|()
+operator|.
+name|add
 argument_list|(
 name|appSched
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-operator|!
-name|usersNonRunnableApps
+name|noLongerPendingApps
 operator|.
-name|remove
+name|add
 argument_list|(
-name|next
-operator|.
-name|getUser
-argument_list|()
-argument_list|,
 name|appSched
 argument_list|)
-condition|)
-block|{
-throw|throw
-operator|new
-name|IllegalStateException
-argument_list|(
-literal|"Waiting app "
-operator|+
-name|next
-operator|+
-literal|" expected to be in usersNonRunnableApps"
-argument_list|)
-throw|;
-block|}
+expr_stmt|;
 comment|// No more than one app per list will be able to be made runnable, so
 comment|// we can stop looking after we've found that many
 if|if
 condition|(
-name|numNowRunnable
+name|noLongerPendingApps
+operator|.
+name|size
+argument_list|()
 operator|>=
 name|appsNowMaybeRunnable
 operator|.
@@ -800,6 +837,85 @@ name|prev
 operator|=
 name|next
 expr_stmt|;
+block|}
+comment|// We remove the apps from their pending lists afterwards so that we don't
+comment|// pull them out from under the iterator.  If they are not in these lists
+comment|// in the first place, there is a bug.
+for|for
+control|(
+name|AppSchedulable
+name|appSched
+range|:
+name|noLongerPendingApps
+control|)
+block|{
+if|if
+condition|(
+operator|!
+name|appSched
+operator|.
+name|getApp
+argument_list|()
+operator|.
+name|getQueue
+argument_list|()
+operator|.
+name|getNonRunnableAppSchedulables
+argument_list|()
+operator|.
+name|remove
+argument_list|(
+name|appSched
+argument_list|)
+condition|)
+block|{
+name|LOG
+operator|.
+name|error
+argument_list|(
+literal|"Can't make app runnable that does not already exist in queue"
+operator|+
+literal|" as non-runnable: "
+operator|+
+name|appSched
+operator|+
+literal|". This should never happen."
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+operator|!
+name|usersNonRunnableApps
+operator|.
+name|remove
+argument_list|(
+name|appSched
+operator|.
+name|getApp
+argument_list|()
+operator|.
+name|getUser
+argument_list|()
+argument_list|,
+name|appSched
+argument_list|)
+condition|)
+block|{
+name|LOG
+operator|.
+name|error
+argument_list|(
+literal|"Waiting app "
+operator|+
+name|appSched
+operator|+
+literal|" expected to be in "
+operator|+
+literal|"usersNonRunnableApps, but was not. This should never happen."
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 comment|/**    * Stops tracking the given non-runnable app    */
@@ -917,7 +1033,6 @@ block|}
 block|}
 comment|/**    * Takes a list of lists, each of which is ordered by start time, and returns    * their elements in order of start time.    *     * We maintain positions in each of the lists.  Each next() call advances    * the position in one of the lists.  We maintain a heap that orders lists    * by the start time of the app in the current position in that list.    * This allows us to pick which list to advance in O(log(num lists)) instead    * of O(num lists) time.    */
 DECL|class|MultiListStartTimeIterator
-specifier|private
 specifier|static
 class|class
 name|MultiListStartTimeIterator
