@@ -66,6 +66,46 @@ name|java
 operator|.
 name|util
 operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Iterator
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Map
 import|;
 end_import
@@ -1113,6 +1153,338 @@ name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testMultipleAppsWaitingOnCousinQueue ()
+specifier|public
+name|void
+name|testMultipleAppsWaitingOnCousinQueue
+parameter_list|()
+block|{
+name|FSLeafQueue
+name|leaf1
+init|=
+name|queueManager
+operator|.
+name|getLeafQueue
+argument_list|(
+literal|"root.queue1.subqueue1.leaf1"
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|FSLeafQueue
+name|leaf2
+init|=
+name|queueManager
+operator|.
+name|getLeafQueue
+argument_list|(
+literal|"root.queue1.subqueue2.leaf2"
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|queueMaxApps
+operator|.
+name|put
+argument_list|(
+literal|"root.queue1"
+argument_list|,
+literal|2
+argument_list|)
+expr_stmt|;
+name|FSSchedulerApp
+name|app1
+init|=
+name|addApp
+argument_list|(
+name|leaf1
+argument_list|,
+literal|"user"
+argument_list|)
+decl_stmt|;
+name|addApp
+argument_list|(
+name|leaf2
+argument_list|,
+literal|"user"
+argument_list|)
+expr_stmt|;
+name|addApp
+argument_list|(
+name|leaf2
+argument_list|,
+literal|"user"
+argument_list|)
+expr_stmt|;
+name|addApp
+argument_list|(
+name|leaf2
+argument_list|,
+literal|"user"
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|leaf1
+operator|.
+name|getRunnableAppSchedulables
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|leaf2
+operator|.
+name|getRunnableAppSchedulables
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|leaf2
+operator|.
+name|getNonRunnableAppSchedulables
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|removeApp
+argument_list|(
+name|app1
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|leaf1
+operator|.
+name|getRunnableAppSchedulables
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|leaf2
+operator|.
+name|getRunnableAppSchedulables
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|leaf2
+operator|.
+name|getNonRunnableAppSchedulables
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testMultiListStartTimeIteratorEmptyAppLists ()
+specifier|public
+name|void
+name|testMultiListStartTimeIteratorEmptyAppLists
+parameter_list|()
+block|{
+name|List
+argument_list|<
+name|List
+argument_list|<
+name|AppSchedulable
+argument_list|>
+argument_list|>
+name|lists
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|List
+argument_list|<
+name|AppSchedulable
+argument_list|>
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|lists
+operator|.
+name|add
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|mockAppSched
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|lists
+operator|.
+name|add
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|mockAppSched
+argument_list|(
+literal|2
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Iterator
+argument_list|<
+name|FSSchedulerApp
+argument_list|>
+name|iter
+init|=
+operator|new
+name|MaxRunningAppsEnforcer
+operator|.
+name|MultiListStartTimeIterator
+argument_list|(
+name|lists
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|iter
+operator|.
+name|next
+argument_list|()
+operator|.
+name|getAppSchedulable
+argument_list|()
+operator|.
+name|getStartTime
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|iter
+operator|.
+name|next
+argument_list|()
+operator|.
+name|getAppSchedulable
+argument_list|()
+operator|.
+name|getStartTime
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|mockAppSched (long startTime)
+specifier|private
+name|AppSchedulable
+name|mockAppSched
+parameter_list|(
+name|long
+name|startTime
+parameter_list|)
+block|{
+name|AppSchedulable
+name|appSched
+init|=
+name|mock
+argument_list|(
+name|AppSchedulable
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|when
+argument_list|(
+name|appSched
+operator|.
+name|getStartTime
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|startTime
+argument_list|)
+expr_stmt|;
+name|FSSchedulerApp
+name|schedApp
+init|=
+name|mock
+argument_list|(
+name|FSSchedulerApp
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|when
+argument_list|(
+name|schedApp
+operator|.
+name|getAppSchedulable
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|appSched
+argument_list|)
+expr_stmt|;
+name|when
+argument_list|(
+name|appSched
+operator|.
+name|getApp
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|schedApp
+argument_list|)
+expr_stmt|;
+return|return
+name|appSched
+return|;
 block|}
 block|}
 end_class
